--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/mn-chetan/yelpcamp/issues"
   },
-  "homepage": "https://github.com/mn-chetan/yelpcamp#readme"
+  "homepage": "https://github.com/mn-chetan/yelpcamp#readme",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2"
+  },
+  "devDependencies": {
+    "node-dev": "^8.0.0"
+  }
 }
